--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
     --btn-background: 200 10% 91%;
     --btn-background-hover: 200 10% 89%;
     --foreground: 200 50% 3%;
-    --container-width: 80vw;
+    --container-width: 100vw; /* Set container-width to 100vw */
     --container-padding-x: 2rem;
     --max-width: 80vw;
   }
@@ -32,7 +32,7 @@
 @layer utilities {
   @media (max-width: 767px) {
     :root {
-      --container-width: 80vw;
+      --container-width: 100vw; /* Set container-width to 100vw */
       --container-padding-x: 2rem;
     }
   }
