--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
     --btn-background: 200 10% 91%;
     --btn-background-hover: 200 10% 89%;
     --foreground: 200 50% 3%;
-    --container-width: 100vw; /* Set container-width to 100vw */
+    --container-width: 80vw;
     --container-padding-x: 2rem;
     --max-width: 80vw;
   }
@@ -30,9 +30,9 @@
 }
 
 @layer utilities {
-  @media (max-width: 767px) {
+  @media (max-width: 80vw) {
     :root {
-      --container-width: 100vw; /* Set container-width to 100vw */
+      --container-width: 80vw;
       --container-padding-x: 2rem;
     }
   }
