--- a/app/cognitive/CognitiveStyles.module.css
+++ b/app/cognitive/CognitiveStyles.module.css
@@ -1,6 +1,6 @@
 /* CognitiveStyles.module.css */
 
-/* Define a common class for row height */
+/* Common class for row height */
 .row-height {
   height: 40px; /* Default height for larger screens */
 }
@@ -10,9 +10,4 @@
   .row-height {
     height: 80px; /* Adjusted height for smaller screens */
   }
-}
-
-/* Define a class for desktop row height */
-.row-height-desktop {
-  height: 60px; /* Adjusted height for desktop screens */
 }
