--- a/app/chart/Functions.css
+++ b/app/chart/Functions.css
@@ -1,14 +1,34 @@
+/* Functions.css */
+
 .functions-container {
   display: flex;
-  justify-content: space-around;
 }
 
 .column {
   flex: 1;
   padding: 10px;
-  border: 1px solid #ccc;
-  margin: 5px;
-  overflow-y: auto;
+  box-sizing: border-box;
+  height: 40px; /* Default height for desktop */
 }
 
-/* Adjust any additional styling based on your design preferences */
+@media (max-width: 767px) {
+  .column {
+    height: 80px; /* Adjusted height for mobile */
+  }
+}
+
+h2 {
+  margin-bottom: 10px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  overflow: none;
+  height: 100%; /* Fill the entire height of the column */
+}
+
+li {
+  margin-bottom: 8px;
+}
