--- a/app/cognitive/CognitiveStyles.module.css
+++ b/app/cognitive/CognitiveStyles.module.css
@@ -1,13 +1,14 @@
 /* CognitiveStyles.module.css */
 
 /* Common class for row height */
-.row-height {
-  height: 40px; /* Default height for larger screens */
+.row {
+  height: 60px; /* Default height for larger screens */
 }
 
 /* Media query to adjust row height for smaller screens */
 @media screen and (max-width: 768px) {
-  .row-height {
+  .row {
     height: 80px; /* Adjusted height for smaller screens */
+    max-width: 100vw;
   }
 }
