--- a/app/cognitive/CognitiveStyles.module.css
+++ b/app/cognitive/CognitiveStyles.module.css
@@ -4,10 +4,8 @@
   height: 70px; /* Default height for larger screens */
 }
 
-@layer utilities {
-  @media (max-width: 100vw) {
-    .row {
-      height: 180px; /* Adjusted height for smaller screens */
-    }
+@media (max-width: 640px) {
+  .row {
+    height: 180px; /* Adjusted height for smaller screens */
   }
 }
