--- a/app/morning/MorningSlider.css
+++ b/app/morning/MorningSlider.css
@@ -87,12 +87,12 @@
   transform: translateY(calc(var(--shift, 0) * 50%));
   transition: transform var(--speed) var(--timing);
   z-index: 2;
-  counter-reset: low var(--valu) high calc(100 - var(--valu));
+  counter-reset: low var(--value) high calc(100 - var(--value));
 }
 
 .tooltip::before,
 .tooltip::after {
-  --range: calc((50 - (var(--valu) / 100 * 10)) * 1%);
+  --range: calc((50 - (var(--value) / 100 * 10)) * 1%);
   font-variant: tabular-nums;
   position: absolute;
   top: 50%;
@@ -118,8 +118,8 @@
 }
 
 .control__track {
-  --morning: hsl(24 74% calc(24% + (30% * (var(--valu, 0) / 100))) / 0.4);
-  --evening: hsl(0 0% 100% / calc(0.1 + (0.4 * (var(--valu, 0) / 100))));
+  --morning: hsl(24 74% calc(24% + (30% * (var(--value, 0) / 100))) / 0.4);
+  --evening: hsl(0 0% 100% / calc(0.1 + (0.4 * (var(--value, 0) / 100))));
   height: calc(50% + (var(--shift) * 50%));
   width: 100%;
   position: absolute;
@@ -140,13 +140,13 @@
 
 .control__track::before {
   left: 0;
-  width: calc(var(--valu, 0) * 1% - 0.5rem);
+  width: calc(var(--value, 0) * 1% - 0.5rem);
   background: var(--morning);
 }
 
 .control__track::after {
   right: 0;
-  width: calc((100 - var(--valu, 0)) * 1% - 0.5rem);
+  width: calc((100 - var(--value, 0)) * 1% - 0.5rem);
   background: var(--evening);
 }
 
@@ -157,15 +157,15 @@
   position: absolute;
   top: 50%;
   background: hsl(0 0% 100% / calc((var(--active, 0) * 0.5) + 0.5));
-  left: calc(var(--valu, 0) * 1%);
+  left: calc(var(--value, 0) * 1%);
   z-index: 2;
   translate: -50% -50%;
   transition: left var(--update), background var(--update);
 }
 
 :root {
-  --speed: 0s; /* Adjust this valu as needed */
-  --update: 0.1s; /* Adjust this valu to make it smaller for faster updates */
+  --speed: 0s; /* Adjust this value as needed */
+  --update: 0.1s; /* Adjust this value to make it smaller for faster updates */
   --timing: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
