--- a/app/morning/MorningSlider.css
+++ b/app/morning/MorningSlider.css
@@ -87,12 +87,12 @@
   transform: translateY(calc(var(--shift, 0) * 50%));
   transition: transform var(--speed) var(--timing);
   z-index: 2;
-  counter-reset: low var(--value) high calc(100 - var(--value));
+  counter-reset: low var(--morning-value) high calc(100 - var(--morning-value));
 }
 
 .tooltip::before,
 .tooltip::after {
-  --range: calc((50 - (var(--value) / 100 * 10)) * 1%);
+  --range: calc((50 - (var(--morning-value) / 100 * 10)) * 1%);
   font-variant: tabular-nums;
   position: absolute;
   top: 50%;
@@ -117,9 +117,13 @@
   right: 0.5rem;
 }
 
-.control__track {
-  --morning: hsl(24 74% calc(24% + (30% * (var(--value, 0) / 100))) / 0.4);
-  --evening: hsl(0 0% 100% / calc(0.1 + (0.4 * (var(--value, 0) / 100))));
+.control__morning-track {
+  --morning: hsl(
+    24 74% calc(24% + (30% * (var(--morning-value, 0) / 100))) / 0.4
+  );
+  --evening: hsl(
+    0 0% 100% / calc(0.1 + (0.4 * (var(--morning-value, 0) / 100)))
+  );
   height: calc(50% + (var(--shift) * 50%));
   width: 100%;
   position: absolute;
@@ -128,8 +132,8 @@
   transition: height var(--speed) var(--timing), background var(--update);
 }
 
-.control__track::before,
-.control__track::after {
+.control__morning-track::before,
+.control__morning-track::after {
   content: "";
   position: absolute;
   top: 0;
@@ -138,15 +142,15 @@
   transition: width var(--update);
 }
 
-.control__track::before {
+.control__morning-track::before {
   left: 0;
-  width: calc(var(--value, 0) * 1% - 0.5rem);
+  width: calc(var(--morning-value, 0) * 1% - 0.5rem);
   background: var(--morning);
 }
 
-.control__track::after {
+.control__morning-track::after {
   right: 0;
-  width: calc((100 - var(--value, 0)) * 1% - 0.5rem);
+  width: calc((100 - var(--morning-value, 0)) * 1% - 0.5rem);
   background: var(--evening);
 }
 
@@ -157,7 +161,7 @@
   position: absolute;
   top: 50%;
   background: hsl(0 0% 100% / calc((var(--active, 0) * 0.5) + 0.5));
-  left: calc(var(--value, 0) * 1%);
+  left: calc(var(--morning-value, 0) * 1%);
   z-index: 2;
   translate: -50% -50%;
   transition: left var(--update), background var(--update);
@@ -169,7 +173,7 @@
   --timing: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.slider-input {
+.morning-slider-input {
   position: relative;
   width: 100%;
   opacity: 0;
